Fixed spacing

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -61,7 +61,6 @@ body {
             display: block;
             position: relative;
             padding: 0.125rem;
-            margin: 0 0.125rem;
             color: inherit;
             text-decoration: none;
 
